DemoMyApp/src/objects/CC_Transaction_Results__c.object
<CustomObject>
    <fields>
        <fullName>Action_Code__c</fullName>
        <description>Will come back from Six Cards after a Transaction is completed</description>
        <label>Action Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>CC Transaction Results</relationshipLabel>
        <relationshipName>CC_Transaction_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Card_Type__c</fullName>
        <label>Card Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <label>Error Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Text__c</fullName>
        <label>Error Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OP_Payment_Made__c</fullName>
        <formula>IF( (Error_Code__c   = &quot;0&quot;), 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OP:Payment Made</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_ID__c</fullName>
        <description>This will come back from Six Cars after the Transaction is completed</description>
        <label>Transaction ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_State__c</fullName>
        <label>Transaction State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>CC Transaction Results</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Action_Code__c</columns>
        <columns>Application__c</columns>
        <columns>Card_Type__c</columns>
        <columns>Expiry_Date__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Error_Code__c</columns>
        <columns>Error_Text__c</columns>
        <columns>Transaction_ID__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>OP_Payment_Made__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Application__c</columns>
        <columns>Card_Type__c</columns>
        <columns>Error_Code__c</columns>
        <columns>Error_Text__c</columns>
        <columns>Expiry_Date__c</columns>
        <columns>Transaction_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>All3</fullName>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>Application__c</columns>
        <columns>Card_Type__c</columns>
        <columns>Error_Code__c</columns>
        <columns>Error_Text__c</columns>
        <columns>Expiry_Date__c</columns>
        <columns>Transaction_ID__c</columns>
        <columns>OP_Payment_Made__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo/>
    </listViews>
    <nameField>
        <displayFormat>MTN-{0000000000}</displayFormat>
        <label>Merchant Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Transaction Results</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>